--- a/packages/io-browser/tsconfig.json
+++ b/packages/io-browser/tsconfig.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "outDir": "dist",
     "rootDir": "src",
-    "declaration": true
+    "lib": ["ES2022", "DOM"],
+    "module": "ESNext",
+    "target": "ES2022",
+    "moduleResolution": "Bundler"
   },
   "include": ["src"]
 }
