--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@csv-utils/core": "file:../../packages/core",
     "@csv-utils/io-browser": "file:../../packages/io-browser",
+    "@types/luxon": "^3.7.1",
+    "luxon": "^3.7.1",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "valtio": "^1.13.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.5",
